# Rocket-Blog

./: .env  .gitignore  Cargo.toml  CodeshipDockerfile  Dockerfile  Procfile  README.md  Rocket.toml  RustConfig  codeship-services.yml  codeship-steps.yml  deployment.env.encrypted  docker-compose.yml
src/: lib.rs  main.rs  models.rs  schema.rs  static_files.rs
src/templates/: application.html.tera  index.html.tera
templates/: index.hbs  index.html.hbs  layout.hbs  show_post.hbs
templates/css/: main.css
